# metroid-prime-extractor

./: .gitignore  Cargo.toml
gamecube/: Cargo.toml
gamecube/src/: bytes.rs  disc.rs  dol.rs  lib.rs
gltf/: Cargo.toml
gltf/src/: lib.rs
metroid-prime/: Cargo.toml
metroid-prime/src/: ancs.rs  cinf.rs  cmdl.rs  cskr.rs  gx.rs  main.rs  mesh.rs  pak.rs  txtr.rs
