[package]
name = "metroid-prime"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
dae-parser = "0.5"
flate2 = { version = "1", default-features = false, features = ["zlib-ng-compat"] }
gamecube = { path = "../gamecube" }
mmap = "0.1"
png = "0.17"
pretty-hex = "0.2"
