[package]
name = "metroid-prime"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib-ng-compat"] }
gamecube = { path = "../gamecube" }
gltf = { path = "../gltf" }
memmap = "0.7"
nalgebra = "0.31"
png = "0.17"
pretty-hex = "0.3"
